Add Bootstrap for index.html(without is better)

--- a/css/style1.css
+++ b/css/style1.css
@@ -300,7 +300,7 @@ body {
     visibility: visible;
     opacity: 1;
   }
-  .mobile-nav:hover, .mobile-nav:focus .dropbtn {
+  /*.mobile-nav:hover,*/ .mobile-nav:focus .dropbtn {
     background-color: grey;
   }
   .mobile-nav .db2 {
